# pyproject-cookiecutter

./: .travis.yml  Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.extension_name}}/: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  jest.config.js  package.json  requirements.txt  setup.cfg  setup.py  setup.py.in
{{cookiecutter.extension_name}}/.github/workflows/: build.yml
{{cookiecutter.extension_name}}/docs/: Makefile  api.md  api.rst  conf.py  conf.py.in  index.rst  installation.rst  make.bat
{{cookiecutter.extension_name}}/js/: .eslintrc.js  jest.config.js  package.json
{{cookiecutter.extension_name}}/js/src/js/: index.js
{{cookiecutter.extension_name}}/scripts/: deploy.py  deploy.sh
{{cookiecutter.extension_name}}/src/ts/: index.ts
{{cookiecutter.extension_name}}/{{cookiecutter.extension_name}}/: __init__.py  _version.py
{{cookiecutter.extension_name}}/{{cookiecutter.extension_name}}/tests/: test_all.py
{{cookiecutter.name}}/: .bumpversion.cfg  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.name}}/.github/: dependabot.yml
{{cookiecutter.name}}/.github/workflows/: build.yml  publish.yml
{{cookiecutter.name}}/binder/: requirements.txt
{{cookiecutter.name}}/cpp/include/{{cookiecutter.name}}/: extension.hpp
{{cookiecutter.name}}/cpp/src/: executable.cpp  extension.cpp  standalone.cpp
{{cookiecutter.name}}/docs/: Makefile  api.md  conf.py  make.bat
{{cookiecutter.name}}/js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  webpack.config.js
{{cookiecutter.name}}/js/src-jupyter/: extension.js  model.js  plugin.js
{{cookiecutter.name}}/{{cookiecutter.module}}/: __init__.py
{{cookiecutter.name}}/{{cookiecutter.module}}/extension/: install.json  {{cookiecutter.module}}.json
{{cookiecutter.name}}/{{cookiecutter.module}}/nbextension/: __init__.py
{{cookiecutter.name}}/{{cookiecutter.module}}/nbextension/static/: extension.js
{{cookiecutter.name}}/{{cookiecutter.module}}/tests/: test_all.py
