[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
exclude={{ cookiecutter.extension_name }}/tests
per-file-ignores=
    {{ cookiecutter.extension_name }}/__init__.py:F401, F403

[manifix]
known-excludes =
    .git*
    .git/**/*
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    package-lock.json
    lib
    build
    dist
    Untitled*.ipynb
