[package]
name = "{{cookiecutter.name}}"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Name this aat to match the python library
name = "{{cookiecutter.module}}"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
atomic-counter = "1"
pyo3 = { version = "0.16", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[package.metadata.maturin]
# python-source = "python" 
